Version X.X.X (?? ??? ????)
 - Patch 2859626: Fixed bug in CSVParser class in parser method
Version 0.4.7 (31 Jan 2008)
 - Added new CalendarPanelApplet class that will load remote iCalendar files and
   display them in a Java applet.
Version 0.4.6 (14 Jan 2008)
 - Added support for EXDATE and RDATE in VEVENT.
 - Bug fix: new events can have empty UID
 - Added support for reading/writing ATTENDEE
 - Bug fix: proper handling of "floating" date-times. Added new Date.setFloating
   and Date.isFloating methods.
 - Added support for CREATED field.
 - Added support for TRANSP field in VEVENT.
 - Bug fix: CalendarPanel header area was not resizing on font changes
Version 0.4.5 (03 Jan 2008)
 - Bug fix: weekly repeating events not saved correctly
 - CalendarPanel bug fix: After pressing the "Today" button, the scrollbar values
   were no longer accurate.
 - Modified CalendarPanel to handle more events per day.  Instead of just not displaying
   events that don't fit, it will now use multiple columns to fit all the day's events.
 - Modified CalendarPanel to not use Swing's internal ToolTip functionality and replaced
   with custom mouse-over popup displays with a more polished appearance.
 - Modified CalendarPanel to recognize setFont calls.
Version 0.4.4 (12 Dec 2007)
 - Fixed generated iCalendar output for RRULEs.  Added simple constructor for
   Rrule class.
Version 0.4.3 (20 Sep 2007)
 - Added support for attachments using iCalendar ATTACH.  Added Apache
   Commons Codec library (for base64 encoding/decoding).
 - Added new getNamedAttribute method to all Property classes
 - Performance improvements for parsing data with very long folded
   lines, such as inline attachments.
Version 0.4.2 (01 Aug 2007)
 - Added support for STATUS field in Event and Journal classes.
 - CalendarPanel changes:
   + Added different background for today's date
   + Added "Today" button to bring display back to current date
   + Allow for overriding background color drawing