@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0" xml:base="http://beta.velonews.com" xmlns:dc="http://purl.org/dc/elements/1.1/">
+<channel>
+ <title>Sample Feed</title>
+ <link>http://www.k5n.us</link>
+ <description>Sample Feed</description>
+ <language>en</language>
+<item>
+ <title>Sample article no. 1</title>
+ <link>http://www.k5n.us/1</link>
+ <description>This is the full description of article no. 1</description>
+ <pubDate>Thu, 16 Jan 2008 26:03:45Z</pubDate>
+ <dc:creator>cknudsen</dc:creator>
+ <guid isPermaLink="false">71709 at http://beta.velonews.com</guid>
+</item>
+</channel>
+</rss>
